--- a/charts/cloud-secrets-manager/Chart.yaml
+++ b/charts/cloud-secrets-manager/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cloud-secrets-controller
+name: cloud-secrets-manager
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
