Fix minor thing

--- a/charts/cloud-secrets-manager/values.yaml
+++ b/charts/cloud-secrets-manager/values.yaml
@@ -1,4 +1,4 @@
-# Default values for cloud-secrets-controller.
+# Default values for cloud-secrets-manager.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
