--- a/charts/cloud-secrets-manager/templates/secret.yaml
+++ b/charts/cloud-secrets-manager/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "cloud-secrets-controller.fullname" . }}-tls
+  name: {{ include "cloud-secrets-manager.fullname" . }}-tls
   labels:
-    {{- include "cloud-secrets-controller.labels" . | nindent 4 }}
+    {{- include "cloud-secrets-manager.labels" . | nindent 4 }}
 type: kubernetes.io/tls
 data:
   ca.crt: Cg==
