--- a/charts/cloud-secrets-manager/templates/serviceaccount.yaml
+++ b/charts/cloud-secrets-manager/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "cloud-secrets-controller.serviceAccountName" . }}
+  name: {{ include "cloud-secrets-manager.serviceAccountName" . }}
   labels:
-    {{- include "cloud-secrets-controller.labels" . | nindent 4 }}
+    {{- include "cloud-secrets-manager.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
