--- a/charts/cloud-secrets-manager/templates/service.yaml
+++ b/charts/cloud-secrets-manager/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cloud-secrets-controller.fullname" . }}
+  name: {{ include "cloud-secrets-manager.fullname" . }}
   labels:
-    {{- include "cloud-secrets-controller.labels" . | nindent 4 }}
+    {{- include "cloud-secrets-manager.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: https
   selector:
-    {{- include "cloud-secrets-controller.selectorLabels" . | nindent 4 }}
+    {{- include "cloud-secrets-manager.selectorLabels" . | nindent 4 }}
