Update chart version to 0.3.0

--- a/charts/cloud-secrets-manager/templates/deployment.yaml
+++ b/charts/cloud-secrets-manager/templates/deployment.yaml
@@ -34,8 +34,8 @@ spec:
             - "cert"
             - "generate"
             - "--namespace={{ .Release.Namespace }}"
-            - "--service-name={{ include "cloud-secrets-manager.fullname" . }}"
-            - "--secret-name={{ include "cloud-secrets-manager.fullname" . }}-tls"
+            - "--service={{ include "cloud-secrets-manager.fullname" . }}"
+            - "--secret={{ include "cloud-secrets-manager.fullname" . }}-tls"
             - "--cert-dir=/etc/certs"
       containers:
         - name: {{ .Chart.Name }}
